fixed spacing in booking on show

--- a/frontend/src/components/spot/show/show.scss
+++ b/frontend/src/components/spot/show/show.scss
@@ -189,3 +189,6 @@
     justify-content: space-between;
     margin-bottom: 1.5em;
 }
+.search-btn-caption{
+    margin-top: 15px;
+}
